# hnefatafl

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  RULES.md  TEST_TODO.md  aesthetic-system.html  build-release.sh  chess_game_database.sql  ci-build-and-test.sh  design-system.html  flake.nix  format.sh  hnefatafl.cabal  init_db.sql  max_moves.py  max_moves_constrained.py  max_moves_hnefatafl.py  max_moves_n24_focused.py  package.yaml  style.css  test  test-engine.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
analysis/: fit_pst.py
app/: Main.hs
backend/: .env  .envrc  .gitignore  CLAUDE.md  asyncapi.json  cabal.project  cabal.project.freeze  db.db  engine_comparison_positions.txt  flake.nix  format.sh  fourmolu.yaml  hnefatafl.cabal  hnefatafl.db  openapi.json  package.yaml  process_batch.sh
backend/app/: Main.hs
backend/bench/: Main.hs
backend/bindings-test/: Driver.hs  MoveList.hs
backend/bu-src/: ServantWebSocket.hs
backend/cli/: Main.hs
backend/db/: schema.sql
backend/dump-specs/: Main.hs
backend/materialized/: default.nix  plan.json
backend/schemas/: game-import.json
backend/scripts/: engine_test_1000_games.sql  engine_test_100_games.sql  game_status_counts.sql  top_players_by_win_rate.sql
backend/src/: Ffi.hs  (+1 more)
bench/: Main.hs
bu-src/: Command.hs  Event.hs  MyLib.hs  WebSocketPong.hs
c/: .clang-format  board.c  board.cpp  board2.cpp  board2.h  board_2.c  capture.cpp  compile_commands.json  layer.h  makefile  notes.org
cbits/: Makefile  readme.org
cpp/: .clang-format  .clangd  CMakeLists.txt  Justfile  board.cpp  capture.cpp  compile_commands.json  layer.cpp  makefile  move.cpp  search.cpp  zobrist.cpp
cpp/lib/: Makefile  bench_capture.c  board.c  board.cpp  board.h  capture.c  capture.cpp  capture.h  io.c  io.h  layer.c  layer.cpp  layer.h  lib.cpp  move.c  move.cpp  move.h  search.cpp  test.c
cpp/tests/: capture.cpp
frontend/: CLAUDE.md  biome.json  flake.nix  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
libhnefatafl/: .clang-format  .envrc  .gitignore  CLAUDE.md  Makefile  PERFORMANCE.md  benchmark_results.txt  default.nix  flake.nix  readme.org  victory_asm.s
nix/: test-cache.nix
src/: Command.hs  Event.hs  Ffi.hs  QuickGame.hs  Routes.hs  ServantWebSocket.hs  Server.hs
test/: Main.hs
(+439 files in other folders)
